[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gameplay/UI/AbilityButton/dark_grey_filter.png" type="Texture" id=1]
[ext_resource path="res://Gameplay/UI/AbilityButton/AbilityButton.gd" type="Script" id=3]
[ext_resource path="res://Gameplay/UI/AbilityButton/white_button_outline.png" type="Texture" id=4]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/icon2.png-f2ee123864db8c7e21096e666c79cea5.stex"

[node name="AbilityButton" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1948.0
margin_bottom = -1048.0
rect_min_size = Vector2( 64, 64 )
texture_normal = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverTexture" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownTexture" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture_progress = ExtResource( 1 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_AbilityButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AbilityButton_mouse_exited"]
